opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "http://mjambon.com/easy-format.html"
bug-reports: "https://github.com/mjambon/easy-format/issues"
dev-repo: "https://github.com/mjambon/easy-format.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: ["dune" {build & >= "1.0"}]
available: [ ocaml-version >= "4.02.3"]